fix: 공지사항 알림배지 fix: 인증번호 확인 버튼 위치 수정

--- a/Front/home/home.css
+++ b/Front/home/home.css
@@ -75,6 +75,7 @@ header img.logo {
     background: #ff3b30;
     border-radius: 50%;
     border: 2px solid #fff;
+    display: none; /* 기본적으로 숨김, 읽지 않은 알림이 있을 때만 표시 */
 }
 
 
